# gh-agent

./: .agent-config.yaml  .gitignore  AGENTS-Intelligent_Traffic_Manager_Agent.md  AGENTS-Map_My_Ganapati.md  AGENTS-SkyLink.md  AGENTS-godseritesh.github.io.md  AGENTS-nss-platform.md  CLAUDE.md  INDEX-Intelligent_Traffic_Manager_Agent.json  INDEX-Map_My_Ganapati.json  INDEX-SkyLink.json  INDEX-godseritesh.github.io.json  INDEX-nss-platform.json  README.md  agent-state.json  pyproject.toml  run_tests.ps1
.github/workflows/: agent-daily.yml  agent-eod-summary.yml  agent-index-build.yml  agent-inventory.yml  agent-issue-detection.yml  agent-main.yml
agent/: __init__.py  agents_md.py  build_indexes.py  coder.py  config.py  hf_client.py  indexer.py  main.py  notify.py  planner.py  pr.py  scanner.py  state.py  sync_state.py
agent/parsers/: __init__.py  parse_ts.mjs  python_cst.py
tests/: test_agents_md.py  test_coder.py  test_config.py  test_failure_modes.py  test_hf_client.py  test_indexer.py  test_planner.py  test_pr.py  test_state.py
tests/fixtures/: corrupt_state.json  invalid_config.yaml  valid_config.yaml  valid_state.json
