[project]
name = "gh-agent"
version = "0.1.0"
description = "Autonomous agent for godseritesh GitHub repos"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
